--- a/package.json
+++ b/package.json
@@ -5,34 +5,40 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "start": "babel-node server",
-        "build": "webpack --config webpack.config.dev.js",
+        "start": "cross-env NODE_ENV=development babel-node server",
+        "build": "cross-env NODE_ENV=production webpack --config webpack.config.dev.js",
         "clean": "rimraf dist",
         "lint": "eslint src server"
     },
     "dependencies": {
         "chalk": "3.0.0",
-        "cross-env": "6.0.3",
-        "express": "4.17.1",
-        "react": "16.12.0",
-        "react-dom": "16.12.0"
+        "cross-env": "7.0.0",
+        "express": "4.17.1"
     },
     "devDependencies": {
-        "@babel/cli": "7.7.5",
-        "@babel/core": "7.7.5",
-        "@babel/node": "7.7.4",
-        "@babel/preset-env": "7.7.6",
-        "@babel/preset-react": "7.7.4",
+        "@babel/cli": "7.8.4",
+        "@babel/core": "7.8.4",
+        "@babel/node": "7.8.4",
+        "@babel/preset-env": "7.8.4",
+        "@babel/preset-react": "7.8.3",
         "@hot-loader/react-dom": "16.11.0",
         "babel-loader": "8.0.6",
-        "eslint": "6.7.2",
-        "eslint-plugin-react": "7.17.0",
+        "compression-webpack-plugin": "3.1.0",
+        "eslint": "6.8.0",
+        "eslint-plugin-react": "7.18.3",
+        "html-webpack-change-assets-extension-plugin": "1.2.0",
         "html-webpack-plugin": "3.2.0",
-        "react-hot-loader": "4.12.18",
-        "rimraf": "3.0.0",
-        "webpack": "4.41.2",
+        "husky": "4.2.1",
+        "react": "16.12.0",
+        "react-dom": "16.12.0",
+        "react-hot-loader": "4.12.19",
+        "rimraf": "3.0.1",
+        "webpack": "4.41.5",
         "webpack-cli": "3.3.10",
         "webpack-dev-middleware": "3.7.2",
         "webpack-hot-middleware": "2.25.0"
+    },
+    "husky": {
+        "pre-commit": "yarn lint"
     }
 }
