--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-    "name": "test-template",
+    "name": "react-template",
     "version": "1.0.0",
-    "main": "src/index.js",
-    "license": "MIT",
     "private": true,
     "scripts": {
         "start": "cross-env NODE_ENV=development babel-node server",
+        "prebuild": "yarn clean",
         "build": "cross-env NODE_ENV=production webpack --config webpack.config.dev.js",
         "clean": "rimraf dist",
         "lint": "eslint src server"
@@ -32,8 +31,8 @@
         "react": "16.12.0",
         "react-dom": "16.12.0",
         "react-hot-loader": "4.12.19",
-        "rimraf": "3.0.1",
-        "webpack": "4.41.5",
+        "rimraf": "3.0.2",
+        "webpack": "4.41.6",
         "webpack-cli": "3.3.10",
         "webpack-dev-middleware": "3.7.2",
         "webpack-hot-middleware": "2.25.0"
