--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "private": true,
     "engines": {
         "yarn": "1.22.0",
-        "node": "12.15.0"
+        "node": "12.16.0"
     },
     "scripts": {
         "start": "cross-env NODE_ENV=development babel-node server",
         "prebuild": "yarn clean",
-        "build": "cross-env NODE_ENV=production webpack --config webpack.config.dev.js",
+        "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
         "clean": "rimraf dist",
         "lint": "eslint src server"
     },
