--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     },
     "scripts": {
         "start": "cross-env NODE_ENV=development babel-node server",
+        "start:prod": "cross-env NODE_ENV=production babel-node server",
         "prebuild": "yarn clean",
-        "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+        "build": "webpack --config webpack.config.prod.js",
         "clean": "rimraf dist",
         "lint": "eslint src server"
     },
