--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,15 @@
     "presets": [
         "@babel/preset-env",
         "@babel/preset-react"
-    ]
+    ],
+    "env": {
+        "development": {
+            "plugins": [
+                "react-hot-loader/babel"
+            ]       
+        },
+        "production": {
+            "plugins": []
+        }
+    }
 }
