--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
     "presets": [
-        "@babel/preset-env",
+        [
+            "@babel/preset-env",
+            {
+                "useBuiltIns": "usage",
+                "corejs": 3,
+                "shippedProposals": true
+            }
+        ],
         "@babel/preset-react"
     ],
     "env": {
