--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "chalk": "3.0.0",
         "cross-env": "7.0.0",
+        "dotenv": "8.2.0",
         "express": "4.17.1"
     },
     "devDependencies": {
