--- a/package.json
+++ b/package.json
@@ -55,8 +55,16 @@
             "pre-commit": "yarn lint"
         }
     },
-    "browsersList": [
-        "not ie",
-        "> 1%"
-    ]
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
