--- a/package.json
+++ b/package.json
@@ -29,19 +29,27 @@
         "@babel/preset-env": "7.8.4",
         "@babel/preset-react": "7.8.3",
         "@hot-loader/react-dom": "16.11.0",
+        "autoprefixer": "9.7.4",
         "babel-loader": "8.0.6",
         "babel-watch": "7.0.0",
         "compression-webpack-plugin": "3.1.0",
         "core-js": "3.6.4",
+        "css-loader": "3.4.2",
+        "cssnano": "4.1.10",
         "eslint": "6.8.0",
         "eslint-plugin-react": "7.18.3",
         "html-webpack-change-assets-extension-plugin": "1.2.0",
         "html-webpack-plugin": "3.2.0",
         "husky": "4.2.2",
+        "mini-css-extract-plugin": "0.9.0",
+        "node-sass": "4.13.1",
+        "postcss-loader": "3.0.0",
         "react": "16.12.0",
         "react-dom": "16.12.0",
         "react-hot-loader": "4.12.19",
         "rimraf": "3.0.2",
+        "sass-loader": "8.0.2",
+        "style-loader": "1.1.3",
         "webpack": "4.41.6",
         "webpack-cli": "3.3.11",
         "webpack-dev-middleware": "3.7.2",
