chore (upgraded dependencies)

--- a/package.json
+++ b/package.json
@@ -3,59 +3,59 @@
     "version": "1.0.0",
     "private": true,
     "engines": {
-        "yarn": "1.22.0",
-        "node": "12.16.0"
+        "yarn": "1.22.4",
+        "node": "12.16.1"
     },
     "scripts": {
-        "start": "cross-env NODE_ENV=development babel-watch server",
+        "start": "cross-env NODE_ENV=development nodemon --exec babel-node server --watch server",
         "start:prod": "cross-env NODE_ENV=production babel-node server",
-        "prebuild:server": "yarn clean",
+        "prebuild:server": "rimraf server-dist",
         "build:server": "babel server --out-dir server-dist --copy-files",
-        "prebuild": "yarn clean",
+        "prebuild": "rimraf dist",
         "build": "webpack --config webpack.config.prod.js",
         "clean": "rimraf dist server-dist",
         "lint": "eslint src server"
     },
     "dependencies": {
-        "chalk": "3.0.0",
-        "cross-env": "7.0.0",
+        "chalk": "4.0.0",
+        "cross-env": "7.0.2",
         "dotenv": "8.2.0",
         "express": "4.17.1"
     },
     "devDependencies": {
         "@babel/cli": "7.8.4",
-        "@babel/core": "7.8.4",
-        "@babel/node": "7.8.4",
-        "@babel/preset-env": "7.8.4",
-        "@babel/preset-react": "7.8.3",
-        "@hot-loader/react-dom": "16.11.0",
-        "autoprefixer": "9.7.4",
-        "babel-loader": "8.0.6",
-        "babel-watch": "7.0.0",
+        "@babel/core": "7.9.0",
+        "@babel/node": "7.8.7",
+        "@babel/preset-env": "7.9.0",
+        "@babel/preset-react": "7.9.4",
+        "@hot-loader/react-dom": "16.13.0",
+        "autoprefixer": "9.7.5",
+        "babel-loader": "8.1.0",
         "compression-webpack-plugin": "3.1.0",
         "core-js": "3.6.4",
         "css-loader": "3.4.2",
         "cssnano": "4.1.10",
         "eslint": "6.8.0",
-        "eslint-plugin-react": "7.18.3",
+        "eslint-plugin-react": "7.19.0",
         "html-webpack-change-assets-extension-plugin": "1.2.0",
-        "html-webpack-plugin": "3.2.0",
-        "husky": "4.2.2",
+        "html-webpack-plugin": "4.0.4",
+        "husky": "4.2.3",
         "mini-css-extract-plugin": "0.9.0",
         "node-sass": "4.13.1",
+        "nodemon": "2.0.2",
         "postcss-loader": "3.0.0",
-        "react": "16.12.0",
-        "react-dom": "16.12.0",
-        "react-hot-loader": "4.12.19",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-hot-loader": "4.12.20",
         "rimraf": "3.0.2",
         "sass-loader": "8.0.2",
         "style-loader": "1.1.3",
-        "webpack": "4.41.6",
+        "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
         "webpack-dev-middleware": "3.7.2",
         "webpack-hot-middleware": "2.25.0",
         "webpack-pwa-manifest": "4.2.0",
-        "workbox-webpack-plugin": "5.0.0"
+        "workbox-webpack-plugin": "5.1.2"
     },
     "husky": {
         "hooks": {
@@ -64,7 +64,7 @@
     },
     "browserslist": {
         "production": [
-            ">0.2%",
+            "> 0.2%",
             "not dead",
             "not op_mini all"
         ],
