feat (added app store structure)

--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,9 @@
         ],
         "@babel/preset-react"
     ],
+    "plugins": [
+        "@babel/plugin-proposal-optional-chaining"
+    ],
     "env": {
         "development": {
             "plugins": [
