--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
         "@babel/cli": "7.8.4",
         "@babel/core": "7.9.0",
         "@babel/node": "7.8.7",
+        "@babel/plugin-proposal-optional-chaining": "7.9.0",
         "@babel/preset-env": "7.9.0",
         "@babel/preset-react": "7.9.4",
         "@hot-loader/react-dom": "16.13.0",
+        "@reduxjs/toolkit": "1.3.3",
         "autoprefixer": "9.7.5",
+        "babel-eslint": "10.1.0",
         "babel-loader": "8.1.0",
         "compression-webpack-plugin": "3.1.0",
         "core-js": "3.6.4",
@@ -47,7 +50,9 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-hot-loader": "4.12.20",
+        "redux-observable": "1.2.0",
         "rimraf": "3.0.2",
+        "rxjs": "6.5.5",
         "sass-loader": "8.0.2",
         "style-loader": "1.1.3",
         "webpack": "4.42.1",
