--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "cssnano": "4.1.10",
         "eslint": "6.8.0",
         "eslint-plugin-react": "7.19.0",
+        "file-loader": "6.0.0",
         "html-webpack-change-assets-extension-plugin": "1.2.0",
         "html-webpack-plugin": "4.0.4",
         "husky": "4.2.3",
@@ -47,6 +48,7 @@
         "node-sass": "4.13.1",
         "nodemon": "2.0.2",
         "postcss-loader": "3.0.0",
+        "prop-types": "15.7.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-hot-loader": "4.12.20",
@@ -55,6 +57,8 @@
         "rxjs": "6.5.5",
         "sass-loader": "8.0.2",
         "style-loader": "1.1.3",
+        "trianglify": "3.0.0",
+        "url-loader": "4.0.0",
         "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
         "webpack-dev-middleware": "3.7.2",
