--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "prebuild": "rimraf dist",
         "build": "webpack --config webpack.config.prod.js",
         "clean": "rimraf dist server-dist",
-        "lint": "eslint src server"
+        "lint": "eslint src server",
+        "lint:sass": "stylelint src/**/*.sass"
     },
     "dependencies": {
         "chalk": "4.0.0",
@@ -48,6 +49,7 @@
         "node-sass": "4.13.1",
         "nodemon": "2.0.2",
         "postcss-loader": "3.0.0",
+        "postcss-sass": "0.4.4",
         "prop-types": "15.7.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
@@ -57,6 +59,7 @@
         "rxjs": "6.5.5",
         "sass-loader": "8.0.2",
         "style-loader": "1.1.3",
+        "stylelint": "13.3.0",
         "trianglify": "3.0.0",
         "url-loader": "4.0.0",
         "webpack": "4.42.1",
@@ -68,7 +71,10 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "yarn lint"
+            "pre-commit": [
+                "yarn lint",
+                "yarn lint:sass"
+            ]
         }
     },
     "browserslist": {
