--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@babel/plugin-proposal-optional-chaining": "7.9.0",
         "@babel/preset-env": "7.9.0",
         "@babel/preset-react": "7.9.4",
+        "@fullhuman/postcss-purgecss": "2.1.0",
         "@hot-loader/react-dom": "16.13.0",
         "@reduxjs/toolkit": "1.3.3",
         "autoprefixer": "9.7.5",
@@ -41,6 +42,8 @@
         "cssnano": "4.1.10",
         "eslint": "6.8.0",
         "eslint-plugin-react": "7.19.0",
+        "file-loader": "6.0.0",
+        "glob": "7.1.6",
         "html-webpack-change-assets-extension-plugin": "1.2.0",
         "html-webpack-plugin": "4.0.4",
         "husky": "4.2.3",
