--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-hot-loader": "4.12.20",
+        "react-redux": "7.2.0",
         "react-router": "5.1.2",
         "react-router-dom": "5.1.2",
         "redux-observable": "1.2.0",
