--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "chalk": "4.0.0",
+        "compression": "1.7.4",
         "cross-env": "7.0.2",
         "dotenv": "8.2.0",
         "express": "4.17.1"
