--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,8 @@
         [
             "@babel/preset-env",
             {
-                "useBuiltIns": "usage",
-                "corejs": 3,
-                "shippedProposals": true
+                "useBuiltIns": "entry",
+                "corejs": 3
             }
         ],
         "@babel/preset-react"
