--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "autoprefixer": "9.7.6",
         "babel-eslint": "10.1.0",
         "babel-loader": "8.1.0",
+        "babel-plugin-module-resolver": "4.0.0",
         "compression-webpack-plugin": "3.1.0",
         "core-js": "3.6.5",
         "css-loader": "3.5.2",
